--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+# Logs and temporary files
+logs/
+logs-autopub/
+*.log
+temp_queue.txt*
+queue.lock
+queue.pipe
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Backup files
+*.bak
+*.old
+*.old.sh
+*.old[0-9]
+
+# Data files that should not be versioned
+processed.csv
+videos_db.csv
+checked_list.txt
+queue_list.txt
+ignore_list.txt
+
+# Virtual environments (if you use them)
+venv/
+env/
+.env/
+
+# OS specific files
+.DS_Store
+Thumbs.db
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
