Update project files

--- a/autopub_monitor/autopub.config
+++ b/autopub_monitor/autopub.config
@@ -12,7 +12,10 @@ HOME_DIR="/home/${USER_NAME}"
 DATA_BASE_DIR="${HOME_DIR}/AutoPublishDATA"
 AUTOPUBLISH_DIR="${DATA_BASE_DIR}/AutoPublish"
 TRANSCRIPTION_DIR="${DATA_BASE_DIR}/transcription_data"
-JIANGUOYUN_BASE_DIR="${HOME_DIR}/jianguoyun/AutoPublishDATA"
+# Add this line after the TRANSCRIPTION_DIR line:
+PREPROCESSED_VIDEOS_DIR="${DATA_BASE_DIR}/PreprocessedVideos"
+# JIANGUOYUN_BASE_DIR="${HOME_DIR}/jianguoyun/AutoPublishDATA"
+JIANGUOYUN_BASE_DIR="${HOME_DIR}/Nutstore Files/AutoPublish"
 JIANGUOYUN_AUTOPUBLISH_DIR="${JIANGUOYUN_BASE_DIR}/AutoPublish"
 JIANGUOYUN_TRANSCRIPTION_DIR="${JIANGUOYUN_BASE_DIR}/transcription_data"
 
