route autopub to LazyEdit app API

--- a/autopub_monitor/autopub.config
+++ b/autopub_monitor/autopub.config
@@ -43,9 +43,17 @@ AUTOPUB_MONITOR_TMUX_SESSION_SH="${PROJECT_DIR}/autopub_monitor_tmux_session.sh"
 AUTOPUB_LOCK="${PROJECT_DIR}/autopub.lock"
 
 # Service URLs
-UPLOAD_URL="http://localhost:8081/upload"
-PROCESS_URL="http://localhost:8081/video-processing"
-PUBLISH_URL="http://lazyingart:8081/publish"
+USE_APP_API="true"
+APP_API_BASE_URL="http://localhost:8787"
+
+# Legacy endpoints (kept for reference)
+LEGACY_UPLOAD_URL="http://localhost:8081/upload"
+LEGACY_PROCESS_URL="http://localhost:8081/video-processing"
+LEGACY_PUBLISH_URL="http://lazyingart:8081/publish"
+
+UPLOAD_URL="${APP_API_BASE_URL}/upload"
+PROCESS_URL="${APP_API_BASE_URL}/api/videos/{video_id}/process"
+PUBLISH_URL="${APP_API_BASE_URL}/api/videos/{video_id}/publish"
 
 # Conda environment
 CONDA_ENV="autopub-video"
